fixed overlay animation so we can click through when invisible

--- a/app/scss/_animations.scss
+++ b/app/scss/_animations.scss
@@ -1,3 +1,11 @@
+.has-fade {
+    visibility: hidden;
+}
+
+
+
+
+
 @keyframes fade-in {
     from {
         visibility: hidden;
